--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@next/font": "13.1.5",
+    "axios": "^1.2.5",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
